# tree-sitter-arturo

./: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json  parser.exp  parser.lib  tree-sitter.json
bindings/node/: binding.cc  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
examples/: sample.art
queries/: highlights.scm  injections.scm  outline.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basics.txt
