[package]
name = "tree-sitter-arturo"
description = "Arturo grammar for tree-sitter"
version = "0.1.0"
keywords = ["incremental", "parsing", "arturo"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/DaZhi-the-Revelator/tree-sitter-arturo"
edition = "2021"
license = "MIT"

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.22"

[build-dependencies]
cc = "1.0"
